# EduWeave

./: .gitignore  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  README.zh-CN.md
backend/: .dockerignore  .env.example  .zeaburignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  worker.py
backend/app/core/: __init__.py  bootstrap.py  config.py  constants.py  database.py  exceptions.py  logging.py  middleware.py  schema_sync.py  security.py
backend/app/modules/: __init__.py  p0_models.py
backend/app/modules/agent/: __init__.py  context_pack.py  executor.py  llm_runner.py  models.py  prompts.py  (+8 more)
backend/app/schemas/: __init__.py  base.py  response.py
backend/app/shared/: __init__.py  question_basis.py
backend/docs/: prompt_cache.md  后端骨架说明.md
backend/migrations/: env.py
backend/migrations/versions/: 20260411_0001_create_sys_user_table.py  20260413_0002_create_remaining_p0_tables.py  20260430_0003_add_semantic_chunk.py  20260430_0004_adjust_semantic_chunk_unique_key.py  20260430_0005_add_markdown_line_range.py  20260503_0006_split_generation_chain.py  20260503_0007_drop_batch_assessment_blueprint.py  20260525_0008_split_homework_tables.py  20260526_0009_add_question_basis_json.py  20260526_0010_phase2_orchestration.py  20260527_0011_clear_stale_docx_export_file_id.py  20260528_0012_lesson_plan_generation_recovery.py  20260529_0013_add_learner_profile_source.py  20260530_0014_add_agent_assistant_tables.py
backend/scripts/: backfill_agent_lesson_plan_batch.py  backfill_lesson_plan_summary.py  benchmark_learner_profile_parsers.py  bootstrap_local.py  ensure_milvus_collections.py  export_api_docs.py  generate_class_learner_profiles.py  manual_multimodal_realtest.py  probe_agent_roundtrip.py  probe_courseware_strict_schema.py  probe_curriculum_strict_schema.py  probe_knowledge_strict_schema.py  probe_lesson_plan_strict_schema.py  probe_tool_protocol.py  raccoon_ppt_official_cli.py  reconcile_alembic.py  recreate_milvus_collections.py  recreate_semantic_chunk_hybrid.py  run_generation_effect_test.py  run_generation_resume_test.py  run_lesson_plan_concurrency_realtest.py  run_raccoon_ppt_realtest.py  start_dev.py  test_lesson_plan_prompt_cache.py  verify_knowledge_extract.py
backend/tests/: conftest.py  test_agent_lesson_plan_batch_inherit.py  test_agent_memory_strategy.py  test_agent_safeguards.py  test_agent_session_delete.py  test_agent_textbook_tools.py  test_alembic.py  test_assessment_api.py  test_auth_api.py  test_bootstrap.py  test_courseware_prompt.py  test_coverage_report_quality.py  test_document_export_api.py  test_docx_render.py  test_file_asset_api.py  test_generation_process_api.py  test_health_api.py  test_heartbeat.py  test_homework_api.py  test_knowledge_api.py  test_knowledge_domain.py  test_learner_profile_api.py  test_llm_multimodal.py  test_llm_service.py  test_local_docx_parser.py  test_mineru_client.py  test_number_util.py  test_orchestrator_api.py  test_parsing_api.py  test_pipeline_curriculum_api.py  test_project_api.py  test_prompt_cache.py  test_raccoon_ppt_client.py  test_settings.py  test_task_center_api.py  test_task_recovery.py  test_textbook_api.py  test_vector_service.py  test_worker_bootstrap.py
(+298 files in other folders)
