[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduweave-backend"
version = "0.1.0"
description = "EduWeave 后端基础骨架"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "pymysql>=1.1.1,<2.0.0",
  "alembic>=1.14.0,<2.0.0",
  "pwdlib[argon2]>=0.2.1,<1.0.0",
  "PyJWT>=2.10.1,<3.0.0",
  "celery[redis]>=5.4.0,<6.0.0",
  "redis>=5.2.1,<6.0.0",
  "structlog>=24.4.0,<26.0.0",
  "pymilvus>=2.5.5,<3.0.0",
  "esdk-obs-python>=3.24.6,<4.0.0",
  "httpx>=0.28.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.25.3,<1.0.0",
]

[tool.setuptools]
packages = [
  "app",
  "app.core",
  "app.modules",
  "app.modules.auth",
  "app.modules.system",
  "app.schemas",
  "app.shared",
  "app.shared.llm",
  "app.shared.mineru",
  "app.shared.queue",
  "app.shared.storage",
  "app.shared.utils",
  "app.shared.vector",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

